--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
+fastapi
+uvicorn[standard]
+twilio
+openai
+langchain
+google-api-python-client
+google-auth-oauthlib
+python-dotenv
+requests
+pydantic
 
